# fetch-and-batch

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  settings.py
utils/: gspread.py  logging.py  snowflake_connector.py
