[project]
name = "batch-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "pandas>=2.3.1",
    "snowflake-connector-python[pandas]>=3.16.0",
]
